[package]
name = "message_pro_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

description = "Macros for NetworkInator"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["full"] }
quote = { version = "1.0.42" }
proc-macro2 = { version = "1.0.103" }
postcard = { workspace = true }