[package]
name = "networkinator"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
tokio = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
erased-serde = { workspace = true }
message_pro_macro = { path = "../message_pro_macro" }
