[package]
name = "networkinator"
version.workspace = true
edition.workspace = true
publish.workspace = true

description = "Crate for network on bevy"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy = { workspace = true }
tokio = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
erased-serde = { workspace = true }
message_pro_macro = "0.1.0"

[features]
default = []
dynamic = ["bevy/dynamic_linking"]
