[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
tokio = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
message_pro_macro = { path = "../message_pro_macro" }
erased-serde = { workspace = true }

[lib]
name = "shared"
path = "src/lib.rs"