[package]
name = "client_dedicated_test"
version.workspace = true
edition.workspace = true

[dependencies]
client = {path = "../../../client"}
shared = {path = "../../../shared"}
bevy = { workspace = true, features = ["dynamic_linking"]  }
serde = { workspace = true }
message_pro_macro = { path = "../../../message_pro_macro" }
postcard = { workspace = true }