[package]
name = "client_dedicated_test"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
networkinator = {path = "../../../networkinator"}
bevy = { workspace = true, features = ["dynamic_linking"]  }
serde = { workspace = true }
message_pro_macro = { path = "../../../message_pro_macro" }
postcard = { workspace = true }