[package]
name = "server_dedicated_test"
version.workspace = true
edition.workspace = true

[dependencies]
server = {path = "../../../server"}
shared = {path = "../../../shared"}
bevy = { workspace = true, features = ["dynamic_linking"] }
message_pro_macro = { path = "../../../message_pro_macro" }
serde = { workspace = true }
postcard = { workspace = true }