[package]
name = "server_dedicated_test"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
networkinator = {path = "../../../networkinator"}
bevy = { workspace = true, features = ["dynamic_linking"] }
message_pro_macro = { path = "../../../message_pro_macro" }
serde = { workspace = true }
postcard = { workspace = true }